fixed for CHLK-2793 Teacher. When teacher switches between a classes during creating an item, will be unexpected tooltips (for calendar and Max score)
updated classes images

--- a/Chalkable.Web/assets/jade/activities/attendance/EditSeatingGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/EditSeatingGrid.jade
@@ -10,7 +10,7 @@
             input(
                 name='rows',
                 value=(self.getRows() || 0),
-                class='validate[custom[number],min[' + (self.getMinRows() || 1) + '], max[99]]',
+                class='validate[required, custom[number],min[' + (self.getMinRows() || 1) + '], max[99]]',
                 data-min-value=self.getMinRows()
             )
         div
@@ -18,7 +18,7 @@
             input(
                 name='columns',
                 value=(self.getColumns() || 0),
-                class='validate[custom[number],min[' + (self.getMinColumns() || 1) + '], max[99]]',
+                class='validate[required, custom[number],min[' + (self.getMinColumns() || 1) + '], max[99]]',
                 data-min-value=self.getMinColumns()
             )
         div
