fixed for CHLK-2796 Teacher. During the loading "Login info page" teacher can skip this page, if he quickly clicks any button (Attendance, Discipline, etc.)

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -21,7 +21,7 @@ mixin AnnouncementTooltip()
     hasGrade = self.isDropped() || grade || grade == 0
     if studentAnnouncementsInfo
         studentAnnouncements = studentAnnouncementsInfo.getItems()
-    +FeedItem(self).animated-item
+    +FeedItem(self, true).animated-item
     .autocomplete-list.announcement-view
     .panel-bg
         .action-bar.buttons
