--- a/Chalkable.Web/assets/jade/activities/settings/student-settings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/student-settings.jade
@@ -2,4 +2,4 @@
     .left
         +ActionLink('settings', 'generalStudent').pressed General
     .right
-        +ActionLink('students', 'info', self.personId).profile-toolbar-button Profile
+        +ActionLink('students', 'details', self.personId).profile-toolbar-button Profile
