--- a/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
@@ -2,7 +2,7 @@ sectionsInfo  = self.prepareDetailedInfo()
 classInfo = self.getClassInfo()
 .class-info.class-profile.loader-container
     .loader
-    +ProfileTopBar(self, 'info')
+    +ProfileTopBar(self, 'details')
     .info-view
         .top-panel
             h1.info.with-line
