--- a/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
@@ -35,7 +35,7 @@ redirectData = self.getRedirectData()
                 each item, i in self.getDisciplines()
                     .row(index=i)
                         student = item.getStudent();
-                        +ActionLink('students', 'info', student.getId()).left.image-container.white.shadow
+                        +ActionLink('students', 'details', student.getId()).left.image-container.white.shadow
                             +PersonImg(student, 47)
                         p.left= student.getFullName()
                         .right
