--- a/Chalkable.Web/assets/jade/activities/grading/GradingTeacherClassSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingTeacherClassSummary.jade
@@ -4,7 +4,7 @@ mixin StudentGradingItem(student)
         tooltipText = tooltipText + student.getAvg().toFixed(2) + '%'
     -attributes['data-tooltip'] = tooltipText
     -attributes['studentId'] = student.getId().valueOf()
-    +ActionLink('students', 'info', student.getId())(attributes).image-container.white.student-item
+    +ActionLink('students', 'details', student.getId())(attributes).image-container.white.student-item
         +PersonImg(student, 47)
 
 topData = self.getTopData()
