--- a/Chalkable.Web/Views/Home/Terms.cshtml
+++ b/Chalkable.Web/Views/Home/Terms.cshtml
@@ -6,6 +6,7 @@
 	<meta name="description" content="Web Apps for your school">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="@Url.StaticContent("/Content/screen.css")" rel="stylesheet" media="screen, projection" type="text/css" />
+    <link href="~/Content/fonts.css" rel="stylesheet" media="screen, projection" type="text/css" />
 	<link href="@Url.StaticContent("/Content/screen-home.css")" rel="stylesheet" media="screen, projection" type="text/css" />
     <link href="@Url.StaticContent("/app/jquery/validation/css/template.css")" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/modernizr-ck.js")"></script>
