--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -1467,6 +1467,10 @@ BODY {
       z-index: 10;
       text-transform: uppercase;
       font: bold 12px Arial;
+
+      a{
+        color: white;
+      }
     }
 
     .gp-title{
