fixed for Jake's eyes
CHLK-2764 New Item: Standards selector screen flashes > hurts eyes

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -5,6 +5,14 @@
 
 @import "partials/_mixins";
 
+.add-standards-dialog.partial-update{
+  position: static;
+
+  &:after{
+    content:none;
+  }
+}
+
 .attachments-and-applications {
   width: 600px;
 
