--- a/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
@@ -42,6 +42,7 @@
               height: 340px;
               vertical-align: top;
               border-right: 1px solid #d7d7d7;
+              display: inline-block;
             }
 
             td:not(.name-td){
