--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
@@ -7,7 +7,7 @@
     date = self.getDate()
     .class-name
         h3.day-day
-            +ActionLink('class', 'details', clazz.getId())=clazz.getName()
+            +ActionLink('class', 'info', clazz.getId())=clazz.getName()
     .info
         if roomNumber
             p.day-down
