--- a/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
@@ -266,9 +266,11 @@ BODY {
 
               .class-icon-container{
                 margin-right: 10px;
-
+                height: 50px;
                 IMG{
                   width: 45px;
+                  position: relative;
+                  top: -50px;
                 }
               }
             }
