fixed CHLK-2781 Profile Now : classes - ellipsis / tooltip

--- a/Chalkable.Web/assets/jade/activities/profile/StudentClassItem.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/StudentClassItem.jade
@@ -1,4 +1,4 @@
 +ActionLink('class', 'info', self.getId().valueOf()).class-link.item
     .class-img
         +ClassImg(self, 45, 80)
-    SPAN=self.getName()
+    SPAN(data-tooltip=self.getFullClassName())=self.getName()
