--- a/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
@@ -189,6 +189,7 @@ BODY {
               white-space: nowrap;
               color: #40220f;
               margin-top: 12px;
+              text-overflow: ellipsis;
             }
           }
 
