fixed for CHLK-2866 [54 717] Chalkable - cannot editing teacher settings - using <backspace> returns user to "now" screen.

--- a/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
@@ -339,13 +339,16 @@ BODY {
             }
 
             input{
-              color: #acacac;
               height: 21px;
               font-size: 13px;
               padding-bottom: 3px;
               padding-top: 0px;
               border: none;
               margin-top: 2px;
+            }
+
+            input[readonly], textarea[readonly]{
+              color: #acacac;
             }
 
             textarea{
